force-app/main/default/objects/Stock_Adjustment__c/fields/Adjustment_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Quantity__c</fullName>
    <label>Adjustment Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>