force-app/main/default/objects/Stock_Adjustment__c/fields/IsCreatedFromMaterial__c.field-meta.xml
<CustomField>
    <fullName>IsCreatedFromMaterial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCreatedFromMaterial</label>
    <type>Checkbox</type>
</CustomField>