force-app/main/default/objects/Stock_Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Material__c</columns>
    <columns>Adjustment_Quantity__c</columns>
    <columns>Adjustment_Date__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>